fejl i filnavne med å

--- a/styling-har.html
+++ b/styling-har.html
@@ -200,48 +200,48 @@
  <div class="slideshow-container">
 	 
 	 		<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup1.png" style="width:100%" alt="slideshow hårstyling">
+			  <img src="billeder/slideshow/harogmakeup1.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup2.png" style="width:100%" alt="slideshow hårstyling">
+			  <img src="billeder/slideshow/harogmakeup2.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup3.png" style="width:100%" alt="slideshow hårstyling">
+			  <img src="billeder/slideshow/harogmakeup3.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup4.png" style="width:100%" alt="slideshow hårstyling">
+			  <img src="billeder/slideshow/harogmakeup4.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup5.png" style="width:100%" alt="slideshow hårstyling">
+			  <img src="billeder/slideshow/harogmakeup5.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup6.png" style="width:100%" alt="slideshow hårstyling">
+			  <img src="billeder/slideshow/harogmakeup6.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup7.png" style="width:100%" alt="slideshow hårstyling">
+			  <img src="billeder/slideshow/harogmakeup7.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup9.png" style="width:100%" alt="slideshow hårstyling">
+			  <img src="billeder/slideshow/harogmakeup9.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup10.png" style="width:100%" alt="slideshow hårstyling">  
+			  <img src="billeder/slideshow/harogmakeup10.png" style="width:100%" alt="slideshow hårstyling">  
 			</div>
 
 			<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup11.png" style="width:100%" alt="slideshow hårstyling">  		  
+			  <img src="billeder/slideshow/harogmakeup11.png" style="width:100%" alt="slideshow hårstyling">  		  
 			</div>	
 	 
 	 		<div class="billede fade">
-			  <img src="billeder/slideshow/hårogmakeup12.png" style="width:100%" alt="slideshow hårstyling">
+			  <img src="billeder/slideshow/harogmakeup12.png" style="width:100%" alt="slideshow hårstyling">
 			</div>
 
 		  
